fixes for the about page timeline view on mobile, working on projects and contact soon

--- a/src/styles/TimelineCard.scss
+++ b/src/styles/TimelineCard.scss
@@ -55,6 +55,7 @@
     margin: 1rem auto;
 
     &::before {
+      visibility: hidden;
       left: 50%; /* Center the circle for top-down layout */
       transform: translate(-50%, -50%);
     }
