--- a/src/styles/TimelineComponent.scss
+++ b/src/styles/TimelineComponent.scss
@@ -16,3 +16,8 @@
     transform: translateX(-50%);
   }
 }
+@media (max-width: 768px) {
+  .timeline-line {
+    visibility: hidden;
+  }
+}
